<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:title="@string/action_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:icon="@android:drawable/star_big_on"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_howto"
        android:title="@string/action_howto"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />
</menu>
